# .nix

./: .gitmodules  .luarc.json  Makefile  README.md  common.nix  configuration.nix  flake.nix  hardware-configuration.nix  home.nix  screens.sh  tools.md
boot/refind/: default.nix  refind-builder.py
config/: signals.lua
config/keymap/: init.lua  layout.lua  media.lua
config/layouts/: deck.lua  init.lua
configs/awesome/: .gitignore  Cargo.toml  rc.lua
configs/awesome/sidecar/: Cargo.toml
configs/awesome/sidecar/src/: lib.rs
configs/wezterm/: hyperlinks.lua  keymap.lua  wezterm.lua
helpers/: icon_theme.lua
hosts/: macbook.nix  nostromo.nix
hosts/macos/: default.nix  homebrew.nix
lib/: brightnessctl.lua  string.lua  volume.lua
overlays/: awesome-git.nix  bufbuild.nix  spider-cli.nix
refind/: refind-builder.py  refind.nix
services/: 1password.nix  xserver.nix
system/: configuration.nix  hardware-configuration.nix
system/macos/: default.nix
system/programs/: brave.nix  cli-tools.nix  default.nix  development.nix  discord.nix  gui.nix  management.nix  nautilus.nix  neovim.nix  seahorse.nix
system/services/: 1password.nix  autorandr.nix  bluetooth.nix  btrfs.nix  default.nix  fonts.nix  pipewire.nix  refind.nix  security.nix  xserver.nix
system/shared/: default.nix
ui/: prompt.lua  scratchpad.lua  systray.lua  wallpaper.lua  window-switcher.lua
ui/titlebar/: init.lua
ui/topbar/: init.lua  layoutbox.lua  taglist.lua  tasklist.lua
user/: home.nix
user/macos/: default.nix
user/nixos/: default.nix
widget/: task_preview.lua
(+52 files in other folders)
