[package]
name = "awesome-sidecar"
version = "0.1.0"
edition = "2021"

[lib]
name = "sidecar"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
mlua = { version = "0.9.5", features = ["module", "macros", "serialize", "lua54"] }
procinfo = "0.4.2"
serde = { version = "1.0.196", features = ["derive"] }
